--- a/BlazorSnake/wwwroot/index.html
+++ b/BlazorSnake/wwwroot/index.html
@@ -22,6 +22,8 @@
     <script src="_framework/blazor.webassembly.js"></script>
 
     <script src="_content/Blazor.Extensions.Canvas/blazor.extensions.canvas.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.core.min.js" integrity="sha256-q2vnVvwrx3RbYXPyAwx7c2npmULQg2VdCXBoJ5+iigs=" crossorigin="anonymous"></script>
+    <script src="_content/Howler.Blazor/JsInteropHowl.js"></script>
     <script>
         // method will be called when the window is resized. It will then also resize the canvasses
         function onResize() {
